[gd_scene load_steps=14 format=2]

[ext_resource path="res://media/button_0.png" type="Texture" id=1]
[ext_resource path="res://media/fonts/KennyFutureNarrow18.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/ItemBarLeft.gd" type="Script" id=3]
[ext_resource path="res://media/buttons/selected_shovel.png" type="Texture" id=4]
[ext_resource path="res://media/buttons/selected_pickaxe.png" type="Texture" id=5]
[ext_resource path="res://media/buttons/selected_bomb.png" type="Texture" id=6]
[ext_resource path="res://media/buttons/selected.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 688, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 672, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 720, 144, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 704, 144, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 640, 208, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 384, 320, 16, 16 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 307.0
margin_right = -1428.0
margin_bottom = -269.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -167.5
margin_right = 277.0
margin_bottom = 167.5
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pickaxes" type="PanelContainer" parent="VBoxContainer"]
margin_right = 78.0
margin_bottom = 78.0
size_flags_horizontal = 0

[node name="TextureButtonPickaxes" type="TextureButton" parent="VBoxContainer/Pickaxes"]
margin_left = 7.0
margin_top = 7.0
margin_right = 71.0
margin_bottom = 71.0
rect_min_size = Vector2( 64, 64 )
action_mode = 0
texture_normal = SubResource( 1 )
texture_disabled = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="Amount" type="Label" parent="VBoxContainer/Pickaxes/TextureButtonPickaxes"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -63.37
margin_top = -64.0
margin_right = 0.629974
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect_selceted" type="TextureRect" parent="VBoxContainer/Pickaxes/TextureButtonPickaxes"]
visible = false
margin_right = 66.0
margin_bottom = 65.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shovels" type="PanelContainer" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 78.0
margin_bottom = 160.0
size_flags_horizontal = 0

[node name="TextureButtonShovels" type="TextureButton" parent="VBoxContainer/Shovels"]
margin_left = 7.0
margin_top = 7.0
margin_right = 71.0
margin_bottom = 71.0
rect_min_size = Vector2( 64, 64 )
action_mode = 0
texture_normal = SubResource( 2 )
texture_disabled = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="Amount" type="Label" parent="VBoxContainer/Shovels/TextureButtonShovels"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -64.0
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect_selceted" type="TextureRect" parent="VBoxContainer/Shovels/TextureButtonShovels"]
visible = false
margin_right = 65.0
margin_bottom = 65.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bombs" type="PanelContainer" parent="VBoxContainer"]
margin_top = 164.0
margin_right = 78.0
margin_bottom = 242.0
size_flags_horizontal = 0

[node name="TextureButtonBombs" type="TextureButton" parent="VBoxContainer/Bombs"]
margin_left = 7.0
margin_top = 7.0
margin_right = 71.0
margin_bottom = 71.0
rect_min_size = Vector2( 64, 64 )
action_mode = 0
texture_normal = SubResource( 3 )
texture_disabled = ExtResource( 6 )
expand = true

[node name="Amount" type="Label" parent="VBoxContainer/Bombs/TextureButtonBombs"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -64.0
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect_selceted" type="TextureRect" parent="VBoxContainer/Bombs/TextureButtonBombs"]
visible = false
margin_right = 66.0
margin_bottom = 67.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 246.0
margin_right = 277.0
margin_bottom = 324.0
mouse_filter = 2
custom_constants/separation = -3

[node name="Traps" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 78.0
margin_bottom = 78.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/Traps"]
margin_left = 7.0
margin_top = 7.0
margin_right = 71.0
margin_bottom = 71.0
rect_min_size = Vector2( 64, 64 )
texture_normal = SubResource( 4 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect_empty" type="TextureRect" parent="VBoxContainer/HBoxContainer/Traps/TextureButton"]
margin_right = 64.0
margin_bottom = 64.0
texture = SubResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect_selceted" type="TextureRect" parent="VBoxContainer/HBoxContainer/Traps/TextureButton"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 75.0
margin_top = 24.0
margin_right = 105.0
margin_bottom = 54.0
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Spacer" type="TextureButton" parent="VBoxContainer/HBoxContainer/Spacer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 23.0
margin_bottom = 23.0
texture_normal = SubResource( 6 )
stretch_mode = 5

[node name="Grid" type="GridContainer" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 102.0
margin_top = 16.0
margin_right = 148.0
margin_bottom = 62.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/vseparation = -3
custom_constants/hseparation = -3
columns = 4
[connection signal="pressed" from="VBoxContainer/Pickaxes/TextureButtonPickaxes" to="." method="_on_TextureButtonPickaxes_pressed"]
[connection signal="pressed" from="VBoxContainer/Shovels/TextureButtonShovels" to="." method="_on_TextureButtonShovels_pressed"]
[connection signal="pressed" from="VBoxContainer/Bombs/TextureButtonBombs" to="." method="_on_TextureButtonBombs_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Traps/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Spacer/Spacer" to="." method="_on_Spacer_pressed"]
